--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,7 +2,7 @@
 
     <!-- Base application theme. -->
     <!--style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar"-->
-    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light.NoActionBar">
+    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light">
         <!-- Customize your theme here. -->
     </style>
 
