--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,8 @@
 <resources>
 
     <!-- Base application theme. -->
-    <!--style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar"-->
-    <style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light">
+    <style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+    <!--style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light"-->
         <!-- Customize your theme here. -->
     </style>
 
