--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,10 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar">
+    <!--style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar"-->
     <!--style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light"-->
-        <!-- Customize your theme here. -->
+    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+            <!-- Customize your theme here. -->
     </style>
 
 </resources>
