--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -20,4 +20,9 @@
           android:icon="@drawable/action_search"
           android:title="@string/action_details"
           app:showAsAction="ifRoom|withText" />
+
+    <item android:id="@+id/action_add_polygon"
+        android:title="@string/action_add_polygon"
+        app:showAsAction="never" />
+
 </menu>
