--- a/app/src/main/res/layout/activity_problem_details.xml
+++ b/app/src/main/res/layout/activity_problem_details.xml
@@ -1,6 +1,14 @@
-<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.view.ViewPager
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+    <ImageView
 
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:src="@drawable/layers"
+        >
+
+    </ImageView>
 </android.support.v4.view.ViewPager>
