--- a/app/src/main/res/layout/fragment_empty.xml
+++ b/app/src/main/res/layout/fragment_empty.xml
@@ -3,4 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/layers"
+        />
 </LinearLayout>
