--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,23 @@
 <resources>
 
+    <color name="polygon">#2196F3</color>
+    <color name="polygonEdges">#0D47A1</color>
+    <color name="textRed">#D50000</color>
+
+    <color name="yellow1">#fff7ff16</color>
+    <color name="yellow2">#ffd8e119</color>
+    <color name="orange1">#fff0bc20</color>
+    <color name="orange2">#ffe6a335</color>
+    <color name="grey1">#30000000</color>
+    <color name="blue2">#ff134371</color>
+    <color name="blue3">#2196F3</color>
+
     <!-- Base application theme. -->
+    <!--style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar"-->
+    <!--style name="AppTheme" parent="@android:style/Theme.DeviceDefault.Light"-->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+            <!-- Customize your theme here. -->
+
     </style>
 
 </resources>
