--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -84,13 +84,16 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/custom_button"
-                android:text="Add" />
+                android:background="@drawable/custom_ok_button"
+                android:text="Add"
+                android:textColor="#FFFFFF" />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cancel" />
+                android:text="Cancel"
+                android:background="@drawable/custom_button"
+                android:textColor="#FFFFFF" />
 
 
         </LinearLayout>
