--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -30,7 +30,8 @@
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:background="@drawable/nice_edit_text" />
 
         <TextView
             android:id="@+id/textView3"
@@ -57,7 +58,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="25"
             android:ems="10"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:background="@drawable/nice_edit_text" />
 
         <TextView
             android:id="@+id/textView4"
@@ -72,14 +74,22 @@
             android:layout_height="wrap_content"
             android:layout_weight="25"
             android:ems="10"
-            android:inputType="textMultiLine" />
+            android:inputType="textMultiLine"
+            android:background="@drawable/nice_edit_text" />
 
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/gallery_item"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="45" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
+
 
             <Button
                 android:layout_width="wrap_content"
@@ -93,20 +103,13 @@
                 android:layout_height="wrap_content"
                 android:text="Cancel"
                 android:background="@drawable/custom_button"
-                android:textColor="#FFFFFF" />
-
-
+                android:textColor="#FFFFFF"
+                android:layout_gravity="center_horizontal" />
         </LinearLayout>
 
         <!--
         http://stackoverflow.com/questions/13796382/android-viewpager-as-image-slide-gallery?rq=1
         -->
-
-        <android.support.v4.view.ViewPager
-            android:id="@+id/gallery_item"
-            android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="45" />
 
     </LinearLayout>
 </ScrollView>
