--- a/app/src/main/res/drawable/nice_edit_text.xml
+++ b/app/src/main/res/drawable/nice_edit_text.xml
@@ -6,7 +6,7 @@
         android:state_pressed="true">
         <shape android:padding="10dp" android:shape="rectangle">
             <solid android:color="#FFFFFF" />
-            <stroke android:width="2dp" android:color="#ffa0a496" />
+            <stroke android:width="2dp" android:color="@color/orange1" />
             <corners android:bottomLeftRadius="7dp" android:bottomRightRadius="7dp" android:topLeftRadius="7dp" android:topRightRadius="7dp" />
         </shape>
     </item>
@@ -14,6 +14,7 @@
         <shape android:padding="10dp"
             android:shape="rectangle">
             <solid android:color="#FFFFFF" />
+            <stroke android:width="1dp" android:color="@color/grey2" />
             <corners android:bottomLeftRadius="7dp" android:bottomRightRadius="7dp" android:topLeftRadius="7dp" android:topRightRadius="7dp" />
         </shape>
     </item>
