added grey2 color

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
     <color name="orange1">#fff0bc20</color>
     <color name="orange2">#ffe6a335</color>
     <color name="grey1">#30000000</color>
+    <color name="grey2">#6D8383</color>
     <color name="blue2">#ff134371</color>
     <color name="blue3">#2196F3</color>
     <color name="green1">#008E00</color>
