--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -25,7 +25,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Problem title:" />
+            android:text="Problem title:"
+            android:paddingBottom="5dp"/>
 
         <EditText
             android:id="@+id/editText"
@@ -38,7 +39,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Problem type:" />
+            android:text="Problem type:"
+            android:paddingBottom="5dp"/>
 
         <Spinner
             android:id="@+id/spinner"
@@ -50,7 +52,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Description:" />
+            android:text="Description:"
+            android:paddingBottom="5dp"/>
 
         <EditText
             android:id="@+id/editText3"
@@ -66,7 +69,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:text="Suggested solution" />
+            android:text="Suggested solution"
+            android:paddingBottom="5dp"/>
 
         <EditText
             android:id="@+id/editText2"
