--- a/app/src/main/res/layout/add_problem_layout.xml
+++ b/app/src/main/res/layout/add_problem_layout.xml
@@ -32,8 +32,7 @@
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/nice_edit_text" />
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textView3"
@@ -64,8 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="25"
             android:ems="10"
-            android:inputType="textMultiLine"
-            android:background="@drawable/nice_edit_text" />
+            android:inputType="textMultiLine" />
 
         <TextView
             android:id="@+id/textView4"
@@ -82,8 +80,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="25"
             android:ems="10"
-            android:inputType="textMultiLine"
-            android:background="@drawable/nice_edit_text" />
+            android:inputType="textMultiLine" />
 
 
         <android.support.v4.view.ViewPager
@@ -102,17 +99,17 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/custom_ok_button"
                 android:text="Add"
-                android:textColor="#FFFFFF" />
+                android:textColor="#000000"
+                />
 
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Cancel"
-                android:background="@drawable/custom_button"
-                android:textColor="#FFFFFF"
-                android:layout_gravity="center_horizontal" />
+                android:textColor="#000000"
+                android:layout_gravity="center_horizontal"
+                />
         </LinearLayout>
 
         <!--
