--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,6 +16,7 @@
     <color name="green2">#1E541E</color>
     <color name="white2">#FCFCFC</color>
     <color name="white3">#E2E2E2</color>
+    <color name="white">#FFFFFF</color>
 
     <!-- Base application theme. -->
     <!--style name="AppTheme" parent="@android:style/Theme.Holo.Light.DarkActionBar"-->
