--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -31,6 +31,7 @@
 
         <!-- HEADER start -->
         <LinearLayout
+            android:orientation="vertical"
             android:id="@+id/header"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
@@ -38,12 +39,13 @@
             android:paddingBottom="5dip">
 
             <!-- LOGO start -->
-            <ImageView
+           <!-- <ImageView
                 android:src="@drawable/logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"/>
-            <!-- LOGO end -->
+                -->
+             <!-- LOGO end -->
 
         </LinearLayout>
         <!-- HEADER end -->
