--- a/app/src/main/res/drawable/layers.xml
+++ b/app/src/main/res/drawable/layers.xml
@@ -1,15 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <bitmap android:src="@drawable/heart_icon"
-        android:gravity="center" />
-</item>
-<item android:top="10dp" android:left="10dp">
-    <bitmap android:src="@drawable/heart_icon"
-        android:gravity="center" />
-</item>
-<item android:top="20dp" android:left="20dp">
-    <bitmap android:src="@drawable/heart_icon"
-        android:gravity="center" />
+    <item>
+    <bitmap android:src="@drawable/under_construction"
+        android:gravity="center"
+        android:scaleType="centerCrop"
+        />
 </item>
 </layer-list>
