--- a/app/src/main/res/layout/fragment_empty.xml
+++ b/app/src/main/res/layout/fragment_empty.xml
@@ -4,8 +4,9 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/layers"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/under_construction"
+
         />
 </LinearLayout>
