--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -39,12 +39,12 @@
             android:paddingBottom="5dip">
 
             <!-- LOGO start -->
-           <!-- <ImageView
+           <ImageView
                 android:src="@drawable/logo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dip"/>
-                -->
+
              <!-- LOGO end -->
 
         </LinearLayout>
