--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="lime_500">#CDDC39</color>
+    <color name="green_500">#4CAF50</color>
 </resources>
