--- a/app/src/main/res/layout/registration_layout.xml
+++ b/app/src/main/res/layout/registration_layout.xml
@@ -58,60 +58,83 @@
                 android:layout_below="@+id/header">
 
                 <!-- FIRST NAME start -->
-                <EditText
-                    android:id="@+id/first_name"
-                    android:hint="@string/prompt_first_name"
-                    android:inputType="textPersonName"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/til_first_name_reg"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/first_name"
+                        android:hint="@string/prompt_first_name"
+                        android:inputType="textPersonName"
+                        android:imeOptions="actionNext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </android.support.design.widget.TextInputLayout>
                 <!-- FIRST NAME end -->
 
                 <!-- SECOND NAME start -->
-                <EditText
-                    android:id="@+id/second_name"
-                    android:hint="@string/prompt_second_name"
-                    android:inputType="textPersonName"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/til_second_name_reg"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/second_name"
+                        android:hint="@string/prompt_second_name"
+                        android:inputType="textPersonName"
+                        android:imeOptions="actionNext"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content" />
+                </android.support.design.widget.TextInputLayout>
                 <!-- SECOND NAME end -->
 
                 <!-- EMAIL start -->
-                <AutoCompleteTextView
-                    android:id="@+id/email"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/til_email_reg"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_email"
-                    android:inputType="textEmailAddress"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_height="wrap_content">
+                    <AutoCompleteTextView
+                        android:id="@+id/email"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:imeOptions="actionNext"
+                        android:hint="@string/prompt_email"
+                        android:inputType="textEmailAddress"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </android.support.design.widget.TextInputLayout>
                 <!-- EMAIL end -->
 
                 <!-- PASSWORD start -->
-                <EditText
-                    android:id="@+id/password"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/til_password_reg"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_password"
+                        android:imeOptions="actionNext"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </android.support.design.widget.TextInputLayout>
                 <!-- PASSWORD end -->
 
                 <!-- CONFIRM PASSWORD start -->
-                <EditText
-                    android:id="@+id/confirm_password"
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/til_confirm_password_reg"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/prompt_confirm_password"
-                    android:imeActionId="@+id/login"
-                    android:imeActionLabel="@string/action_sign_in_short"
-                    android:imeOptions="actionUnspecified"
-                    android:inputType="textPassword"
-                    android:maxLines="1"
-                    android:singleLine="true" />
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/confirm_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/prompt_confirm_password"
+                        android:inputType="textPassword"
+                        android:maxLines="1"
+                        android:singleLine="true" />
+                </android.support.design.widget.TextInputLayout>
                 <!-- PASSWORD end -->
 
                 <!-- SUGN UP BUTTON start -->
