--- a/app/src/main/res/layout/item_comments_listview.xml
+++ b/app/src/main/res/layout/item_comments_listview.xml
@@ -2,25 +2,41 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
-    android:paddingBottom="8dp"
     android:orientation="horizontal"
     android:clickable="false"
-    >
+    android:paddingTop="20dp"
+    android:paddingBottom="20dp">
 
     <ImageView
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@drawable/problem_type_1_3x">
+        android:src="@drawable/problem_type_1_3x"
+        android:contentDescription="@string/user_avatar"
+        >
     </ImageView>
 
-    <TextView
-        android:id="@+id/txtCaption"
-        android:layout_marginLeft="16dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:gravity="center_vertical">
-    </TextView>
+    <LinearLayout
+        android:layout_marginLeft="20dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/textUserName"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/txtCaption"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
+            >
+        </TextView>
+
+    </LinearLayout>
 
 </LinearLayout>
